force-app/main/default/objects/leaseworks__Supplemental_Rent_Adjustment__c/leaseworks__Supplemental_Rent_Adjustment__c.object-meta.xml
<CustomObject>
    <description>Manual MR fund adjustments allow users to address scenarios not covered by system-generated transactions (invoices, payments, opening entries, etc.). These adjustments are recorded separately for historical tracking.</description>
    <label>Supplemental Rent Adjustment</label>
    <nameField>
        <label>Supplemental Rent Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplemental Rent Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>