force-app/main/default/objects/leaseworks__Supplemental_Rent_Adjustment__c/fields/leaseworks__Adjust_Accrued_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Adjust_Accrued_Amount__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Select this option to update the Accrued amounts for the selected Supplemental Rent record.</description>
    <inlineHelpText>Select this option to update the Accrued amounts for the selected Supplemental Rent record.</inlineHelpText>
    <label>Adjust Accrued Amount</label>
    <type>Checkbox</type>
</CustomField>