force-app/main/default/objects/leaseworks__Supplemental_Rent_Adjustment__c/fields/leaseworks__Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount__c</fullName>
    <inlineHelpText>Amount of the adjustment that will affect Invoiced and Cash balances of the fund. Can be positive or negative</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>