force-app/main/default/objects/leaseworks__Supplemental_Rent_Adjustment__c/fields/leaseworks__Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sequence_Number__c</fullName>
    <label>_Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>