force-app/main/default/objects/leaseworks__Supplemental_Rent_Adjustment__c/fields/leaseworks__Supplemental_Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent_Type__c</fullName>
    <description>This field auto copies the value from Supplemental Rent Type field, at the time of Adjustment creation.</description>
    <formula>TEXT(leaseworks__Y_Hidden_Supplemental_Rent_Type__c)</formula>
    <inlineHelpText>This field auto copies the value from Supplemental Rent Type field, at the time of Adjustment creation.</inlineHelpText>
    <label>Supplemental Rent Type</label>
    <type>Text</type>
</CustomField>